--- a/meditations/harmony-inside-me.html
+++ b/meditations/harmony-inside-me.html
@@ -90,9 +90,9 @@
                     <h1 class="med-single-hero-title">Гармония внутри себя
                     </h1>
                     <p class="med-single-hero-text">
-                        Медитация для работы с конкретным желанием в любой сфере: любовь, деньги, проекты, перемены.
-                        Помогает убрать внутренние «хочу, но не получится» и выстроить четкое намерение. Желание
-                        перестаёт быть мечтой и становится внутренним решением, которое запускает реализацию.
+                        Когда внутри разбалансировка, это чувствуют все вокруг. Эта медитация помогает восстановить
+                        равновесие, вернуть уверенность и ощущение своей ценности. В таком состоянии вы становитесь
+                        центром притяжения: люди тянутся, возможности приходят, а бывшие иногда возвращаются сами.
                     </p>
                     <p class="med-single-price">3 000 ₽</p>
                     <a href="#contact" aria-lable="Go to contact section" class="btn-primary med-single-cta">
@@ -110,18 +110,18 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <h2 class="med-single-problem-title ">
-                        Исполнение желания:<br>
+                        Гармония внутри себя:<br>
                     </h2>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        превратите «хочу» в «будет»
+                        станьте собой, к которой тянутся
                     </p>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Представьте что вы точно знаете, чего хотите. Отношения, деньги, переезд, новая работа, неважно.
-                        Желание есть. Но где-то внутри тихий голос: «Ну да, хотеть не вредно», «А вдруг не получится?»,
-                        «Это не для таких как я».
+                        Представьте: вы на вечеринке или просто в компании. Вроде всё нормально, но внутри постоянный
+                        фон: «Как я выгляжу?», «Что обо мне подумают?», «Наверное, я тут самая скучная». Вы улыбаетесь,
+                        общаетесь, а внутри сжаты в комок.
                     </p>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        И желание так и остаётся мечтой, красивой картинкой, в которую вы сами не верите. Знакомо?
+                        И потом едете домой и прокручиваете: «Зачем я это сказала?», «Надо было по-другому». Знакомо?
                     </p>
                 </div>
             </div>
@@ -129,45 +129,43 @@
         <!-- Как помогает -->
         <section class="med-single-benefits">
             <div class="container">
-                <h2 class="section-title">Что обычно мешает желаниям сбываться:</h2>
+                <h2 class="section-title">Как выглядит внутренний разлад:</h2>
                 <div class="med-single-benefits-grid">
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Вы хотите отношений, но внутри сидит «все нормальные мужики заняты» или «меня такую не
-                            выберут».
+                            Вы постоянно сравниваете себя с другими. И всегда проигрываете в этом сравнении.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Хотите больше денег, но фоном крутится «деньги это зло», «богатые все сволочи», «в нашей
-                            семье богатых не было»
+                            Не можете сказать «нет», соглашаетесь на то, что вам не подходит, потому что боитесь
+                            обидеть.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Мечтаете о переменах, но страшно: «а вдруг станет хуже?», «лучше синица в руках».
+                            Ищете одобрения. Если не похвалили, значит, сделали плохо
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Загадываете желание, а сами не верите, как будто для галочки.
+                            Боитесь ошибок. Лучше вообще не делать, чем сделать не идеально.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Хотите одно, а внутри чувствуете, что «не заслужили», «не время», «сначала надо...».
+                            Не заявляете о своих желаниях. Подстраиваетесь, терпите, молчите.
                         </p>
                     </div>
                     <div class="med-single-benefit">
                         <div class="med-single-benefit-icon">✦</div>
                         <p>
-                            Желание вроде есть, но оно размытое, нечеткое, сами не можете сформулировать, чего конкретно
-                            хотите.
+                            Внутри ощущение «я недостаточно хороша». Для отношений, для работы, для счастья.
                         </p>
                     </div>
                 </div>
@@ -178,13 +176,12 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <p class="med-single-problem-text  extra-golden-line-after">
-                        КЭта медитация не про «визуализируйте и оно придёт». Она про то, чтобы убрать внутренний раздрай
-                        между «хочу» и «не верю». Когда желание и внутреннее состояние совпадают, запускается
-                        реализация.
+                        Когда внутри такой раздрай, это видно снаружи. Вы как будто извиняетесь за своё существование. И
+                        люди это считывают: не воспринимают всерьёз, не ценят, не выбирают.
                     </p>
                     <p class="med-single-problem-text extra-golden-line-after">
-                        В процессе медитации вы выбираете конкретный запрос, удерживаете фокус на результате и создаете
-                        внутри состояние, где это уже возможно. Желание перестаёт быть мечтой и становится решением.
+                        Эта медитация выравнивает вас изнутри. Возвращает ощущение «я в порядке», «я ценная», «мне можно
+                        занимать место в этом мире». Без понтов и короны, просто спокойная уверенность в себе.
                     </p>
                 </div>
             </div>
@@ -195,17 +192,18 @@
                 <h2 class="section-title">Что реально чувствуется потом:</h2>
                 <ul class="med-single-effect-list">
                     <li>
-                        Ясность. Вы точно понимаете, чего хотите, без «ну, может быть» и «было бы неплохо».
+                        Вы перестаёте сравнивать себя с другими. Вы это вы, и этого достаточно.
                     </li>
                     <li>
-                        Внутреннее разрешение. Уходит ощущение «мне нельзя», «не для меня». Становится: можно, и я хочу.
+                        Появляется внутренняя уверенность. Вам не нужно одобрение, чтобы чувствовать себя хорошо.
                     </li>
                     <li>
-                        Спокойная уверенность вместо тревожного «хоть бы, хоть бы». Вы знаете, что это ваше.
+                        Легче говорить «нет» и заявлять о том, чего хотите.
+
                     </li>
                     <li>
-                        Желание начинает двигаться. Приходят идеи, возможности, нужные люди, как будто процесс
-                        запустился..
+                        Меняется энергия. Люди начинают тянуться, уважать, выбирать вас. Бывшие иногда возвращаются
+                        именно в этот момент, потому что вы снова стали той, в кого влюбились.
                     </li>
                 </ul>
             </div>
@@ -215,9 +213,8 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <p class="med-single-problem-text extra-golden-line-after">
-                        Попробуйте. Выберите один конкретный запрос в любой сфере. Пройдите медитацию как точку выбора.
-                        Можно один раз, можно возвращаться и усиливать намерение. Это та самая практика, которая раньше
-                        выходила как «медитация на новую любовь», но она работает с любым желанием.
+                        Это не про то, чтобы стать кем-то другим. Это про то, чтобы наконец стать собой и перестать за
+                        это извиняться.
                     </p>
                 </div>
             </div>
