--- a/meditations/wish-fulfillment.html
+++ b/meditations/wish-fulfillment.html
@@ -177,7 +177,7 @@
             <div class="container">
                 <div class="med-single-problem-content">
                     <p class="med-single-problem-text  extra-golden-line-after">
-                        КЭта медитация не про «визуализируйте и оно придёт». Она про то, чтобы убрать внутренний раздрай
+                        Эта медитация не про «визуализируйте и оно придёт». Она про то, чтобы убрать внутренний раздрай
                         между «хочу» и «не верю». Когда желание и внутреннее состояние совпадают, запускается
                         реализация.
                     </p>
@@ -204,7 +204,7 @@
                     </li>
                     <li>
                         Желание начинает двигаться. Приходят идеи, возможности, нужные люди, как будто процесс
-                        запустился..
+                        запустился.
                     </li>
                 </ul>
             </div>
