Add let go pain  med page

--- a/meditations.html
+++ b/meditations.html
@@ -413,7 +413,8 @@
                             прослушивания становится легче, тише внутри, и появляется силы идти дальше.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
+                        <a href="meditations/let-go-of-the-pain-from-the-past.html" class="med-card-link"
+                            aria-label="Узнать больше об отпускании боли прошлого">
                             Узнать больше
                         </a>
                     </article>
