CHange link to pack

--- a/meditations.html
+++ b/meditations.html
@@ -206,8 +206,9 @@
                                 негатива и мягко восстанавливать силы после тяжёлых периодов.
                             </p>
                             <p class="med-card-price">7 000 ₽</p>
-                            <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                                Получить комплект
+                            <a href="meditations/packs-recharge.html" class="med-card-link"
+                                aria-label="Узнать больше о защите и балансе энергии">
+                                Узнать больше
                             </a>
                         </article>
                     </div>
