Change structure of how section

--- a/meditations/packs-recharge.html
+++ b/meditations/packs-recharge.html
@@ -88,27 +88,37 @@
         <section class="pack-single-how">
             <div class="container">
                 <h2 class="section-title">Как слушать:</h2>
-                <div class="pack-single-how-list">
-                    <div class="pack-single-how-step">
-                        <div class="pack-single-how-number">1-7</div>
-                        <p>Дни 1-7: слушаете «<a href="meditation-osvobodi-golova-telo.html">Освободи голову и тело</a>»
-                        </p>
-                    </div>
-                    <div class="pack-single-how-step">
-                        <div class="pack-single-how-number">7+</div>
-                        <p>С 7 дня добавляете «<a href="meditation-balans-energiy.html">Баланс энергий</a>»</p>
-                    </div>
-                    <div class="pack-single-how-step">
-                        <div class="pack-single-how-number">14+</div>
-                        <p>С 14 дня добавляете «<a href="meditation-rodovaya-zashchita.html">Родовую защиту</a>»</p>
-                    </div>
-                    <div class="pack-single-how-step">
-                        <div class="pack-single-how-number">21</div>
-                        <p>К 21 дню слушаете все три, и цикл завершён</p>
-                    </div>
+                <div class="pack-single-how-text">
+                    <p class="how-text-step">
+                        Первые 7 дней вы слушаете
+                        <a href="meditation-osvobodi-golova-telo.html" class="how-link">
+                            «Освободи голову и тело»
+                        </a> один раз в день.
+                    </p>
+                    <div class="how-separator"></div>
+                    <p class="how-text-step">
+                        Начиная с 7 дня добавляете
+                        <a href="meditation-balans-energiy.html" class="how-link">
+                            «Баланс энергий»
+                        </a> — можете слушать её утром, а первую
+                        днём или вечером.
+                    </p>
+                    <div class="how-separator"></div>
+                    <p class="how-text-step">
+                        С 14 дня подключаете
+                        <a href="meditation-rodovaya-zashchita.html" class="how-link">
+                            «Родовую защиту»
+                        </a>, чтобы закрепить результат и
+                        поставить защиту.
+                    </p>
+                    <div class="how-separator"></div>
+                    <p class="how-text-step">
+                        К 21 дню вы уже слушаете все три аудиопрограммы, и цикл перезагрузки считается завершённым.
+                    </p>
                 </div>
             </div>
         </section>
+
 
         <!-- Проблема -->
         <section class="pack-single-problem">
