--- a/meditations/packs-recharge.html
+++ b/meditations/packs-recharge.html
@@ -91,14 +91,14 @@
                 <div class="pack-single-how-text">
                     <p class="how-text-step">
                         Первые 7 дней вы слушаете
-                        <a href="meditation-osvobodi-golova-telo.html" class="how-link">
+                        <a href="free-mind-and-body.html" class="how-link">
                             «Освободи голову и тело»
                         </a> один раз в день.
                     </p>
                     <div class="how-separator"></div>
                     <p class="how-text-step">
                         Начиная с 7 дня добавляете
-                        <a href="meditation-balans-energiy.html" class="how-link">
+                        <a href="energy-balance.html" class="how-link">
                             «Баланс энергий»
                         </a> — можете слушать её утром, а первую
                         днём или вечером.
@@ -106,7 +106,7 @@
                     <div class="how-separator"></div>
                     <p class="how-text-step">
                         С 14 дня подключаете
-                        <a href="meditation-rodovaya-zashchita.html" class="how-link">
+                        <a href="family-protection.html" class="how-link">
                             «Родовую защиту»
                         </a>, чтобы закрепить результат и
                         поставить защиту.
