--- a/meditations/packs-recharge.html
+++ b/meditations/packs-recharge.html
@@ -91,14 +91,14 @@
                 <div class="pack-single-how-text">
                     <p class="how-text-step">
                         Первые 7 дней вы слушаете
-                        <a href="free-mind-and-body.html" class="how-link">
+                        <a href="free-mind-and-body-in-pack.html" class="how-link">
                             «Освободи голову и тело»
                         </a> один раз в день.
                     </p>
                     <div class="how-separator"></div>
                     <p class="how-text-step">
                         Начиная с 7 дня добавляете
-                        <a href="energy-balance.html" class="how-link">
+                        <a href="energy-balance-in-pack.html" class="how-link">
                             «Баланс энергий»
                         </a> — можете слушать её утром, а первую
                         днём или вечером.
@@ -106,7 +106,7 @@
                     <div class="how-separator"></div>
                     <p class="how-text-step">
                         С 14 дня подключаете
-                        <a href="family-protection.html" class="how-link">
+                        <a href="family-protection-in-pack.html" class="how-link">
                             «Родовую защиту»
                         </a>, чтобы закрепить результат и
                         поставить защиту.
@@ -152,8 +152,8 @@
                         <p class="pack-single-step-text">Сначала убираем всё, что налипло. Чужие эмоции, негатив, косые
                             взгляды, зависть, тяжесть после общения с токсичными людьми. Всё, что не ваше, уходит. Как
                             генеральная уборка внутри.</p>
-                        <a href="free-mind-and-body.html" class="pack-single-step-link" target="_blank" rel="noopener"
-                            aria-label="Подробнее об освобождении головы и тела">
+                        <a href="free-mind-and-body-in-pack.html" class="pack-single-step-link" target="_blank"
+                            rel="noopener" aria-label="Подробнее об освобождении головы и тела">
                             Подробнее →
                         </a>
                     </div>
@@ -164,8 +164,8 @@
                         <p class="pack-single-step-text">После чистки часто бывает пусто. Убрали чужое, а своего ещё
                             нет. На этом этапе вы наполняетесь обратно. Возвращаете свою энергию, внутреннюю опору,
                             ощущение «я в себе».</p>
-                        <a href="energy-balance.html" class="pack-single-step-link" target="_blank" rel="noopener"
-                            aria-label="Подробнее о балансе энергий">
+                        <a href="energy-balance-in-pack.html" class="pack-single-step-link" target="_blank"
+                            rel="noopener" aria-label="Подробнее о балансе энергий">
                             Подробнее →
                         </a>
                     </div>
@@ -176,7 +176,7 @@
                         <p class="pack-single-step-text">И только потом ставите защиту. Чтобы чужое больше не пробивало.
                             Чтобы вы могли общаться с людьми, ходить в толпу, сталкиваться с негативом, и оставаться в
                             своей энергии.</p>
-                        <a href="family-protection.html" class="pack-single-step-link"
+                        <a href="family-protection-in-pack.html" class="pack-single-step-link"
                             aria-label="Подробнее о родовой защите" target="_blank" rel="noopener">
                             Подробнее →
                         </a>
