Add final section

--- a/meditations/packs-recharge.html
+++ b/meditations/packs-recharge.html
@@ -184,7 +184,17 @@
                 </div>
             </div>
         </section>
-
+        <!-- Проблема -->
+        <section class="pack-single-problem">
+            <div class="container">
+                <div class="pack-single-problem-content">
+                    <p class="pack-single-problem-text extra-golden-line-after">
+                        Можно повторять цикл, когда чувствуете, что снова нахватали лишнего. Это ваша энергетическая
+                        гигиена.
+                    </p>
+                </div>
+            </div>
+        </section>
         <!-- Контакты -->
         <section id="contact">
             <div class="container contact-grid">
