Fix links and content for packs

--- a/meditations.html
+++ b/meditations.html
@@ -142,32 +142,27 @@
                     <div class="med-card-grid">
                         <!-- ПАКЕТЫ (3 шт.) -->
 
-                        <!-- Пакет: Опора внутри меня -->
+                        <!-- Пакет: СВОБОДА -->
                         <article class="med-card med-card--package">
                             <div class="med-card-tag">Набор медитаций</div>
                             <figure class="med-card-figure">
                                 <img src="assets/images/meditations-images/meditation-pack-stamina.png"
                                     alt="Светлая медитация для восстановления опоры внутри себя" class="med-card-image">
                             </figure>
-                            <h3 class="med-card-title">Опора внутри меня</h3>
+                            <h3 class="med-card-title">СВОБОДА</h3>
                             <p class="med-card-text">
-                                Когда кажется, что всё рушится и держаться не за что. Набор помогает собрать себя
-                                изнутри,
-                                вернуть спокойствие,
-                                уверенность и ощущение внутреннего стержня. После практик пропадает растерянность и
-                                приходит
-                                чувство, что вы
-                                снова твёрдо стоите на ногах.
+                                Три медитации для тех, кого накрывает тревога и бесконечные мысли. Сначала успокаиваете
+                                голову, потом отпускаете контроль над тем, что не изменить, и затем находите опору
+                                внутри себя. После прохождения вы спокойны, устойчивы и больше не тратите силы на то,
+                                что не в ваших руках
                             </p>
-
                             <p class="med-card-price">7 000 ₽</p>
-                            <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                                Оформить набор
+                            <a href="meditations/packs-freedom.html" class="med-card-link"
+                                aria-label="Узнать больше о восстановлении внутренней опоры">
+                                Узнать больше
                             </a>
                         </article>
-
-
-                        <!-- Пакет: Отпустить боль прошлого + Разрыв кармической связи + Призыв новой любви -->
+                        <!-- Пакет: Любовь -->
                         <article class="med-card med-card--package">
                             <div class="med-card-tag">Набор медитаций</div>
                             <figure class="med-card-figure">
@@ -175,35 +170,32 @@
                                     alt="Медитации для исцеления прошлого и притяжения новой любви"
                                     class="med-card-image">
                             </figure>
-                            <h3 class="med-card-title">Исцеление сердца и новая любовь</h3>
+                            <h3 class="med-card-title">ЛЮБОВЬ</h3>
                             <p class="med-card-text">
-                                Набор для тех, кто проживает тяжёлые отношения или развод. Включает «Отпустить боль
-                                прошлого»,
-                                «Разрыв кармической связи» и «Призыв новой любви». Помогает отпустить старую боль,
-                                освободиться от
-                                болезненной привязки и открыть сердце для отношений в резонансе с вами.
+                                Три медитации, которые работают вместе: сначала отпускаете боль прошлого, потом
+                                восстанавливаете уверенность и внутреннюю гармонию, и только потом открываетесь новой
+                                любви. Именно в таком порядке. Потому что пока внутри старые раны и неуверенность,
+                                настоящая любовь не приходит.
                             </p>
                             <p class="med-card-price">7 000 ₽</p>
-                            <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                                Заказать набор
+                            <a href="meditations/packs-love.html" class="med-card-link"
+                                aria-label="Узнать больше об исцелении сердца и новой любви">
+                                Узнать больше
                             </a>
                         </article>
 
-                        <!-- Пакет: Защита рода + Освободи голову и тело + Баланс энергии -->
+                        <!-- Пакет: ПЕРЕЗАГРУЗКА -->
                         <article class="med-card med-card--package">
                             <div class="med-card-tag">Набор медитаций</div>
                             <figure class="med-card-figure">
                                 <img src="assets/images/meditations-images/meditation-pack-energy.png"
                                     alt="Медитации защиты, очищения и восстановления энергии" class="med-card-image">
                             </figure>
-                            <h3 class="med-card-title">Защита и баланс энергии</h3>
+                            <h3 class="med-card-title">ПЕРЕЗАГРУЗКА</h3>
                             <p class="med-card-text">
-                                Комплект для тех, кто много сталкивается с чужими эмоциями и нагрузкой. Включает
-                                медитации
-                                «Защита рода»,
-                                «Освободи голову и тело» и «Баланс энергии». Помогает не втягиваться в чужие состояния,
-                                очищаться от налипшего
-                                негатива и мягко восстанавливать силы после тяжёлых периодов.
+                                Три медитации, которые работают вместе: сначала убираете всё чужое и налипшее, потом
+                                восстанавливаете свою энергию, и затем ставите защиту, чтобы больше не цеплялось. Именно
+                                в таком порядке. Полный цикл: очистить, наполнить, защитить. После него вы как новая.
                             </p>
                             <p class="med-card-price">7 000 ₽</p>
                             <a href="meditations/packs-recharge.html" class="med-card-link"
