--- a/meditations/packs-love.html
+++ b/meditations/packs-love.html
@@ -69,18 +69,18 @@
             <div class="container pack-single-hero-inner">
                 <div class="pack-single-hero-main">
                     <p class="pack-single-badge">ПАКЕТ АУДИОПРОГРАММ</p>
-                    <h1 class="pack-single-hero-title">ПЕРЕЗАГРУЗКА</h1>
+                    <h1 class="pack-single-hero-title">ЛЮБОВЬ</h1>
                     <p class="pack-single-hero-text">
-                        Три медитации, которые работают вместе: сначала убираете всё чужое и налипшее, потом
-                        восстанавливаете свою энергию, и затем ставите защиту, чтобы больше не цеплялось. Именно в таком
-                        порядке. Полный цикл: очистить, наполнить, защитить. После него вы как новая.
+                        Три медитации, которые работают вместе: сначала отпускаете боль прошлого, потом восстанавливаете
+                        уверенность и внутреннюю гармонию, и только потом открываетесь новой любви. Именно в таком
+                        порядке. Потому что пока внутри старые раны и неуверенность, настоящая любовь не приходит.
                     </p>
                     <p class="pack-single-price">7 000 ₽</p>
                     <a href="#contact" class="btn-primary pack-single-cta">Получить полный пакет</a>
                 </div>
                 <figure class="pack-single-hero-figure">
-                    <img src="../assets/images/meditations-images/meditation-pack-energy.png"
-                        class="pack-single-hero-image" alt="ПАКЕТ ПЕРЕЗАГРУЗКА — три аудиопрограммы Сурии">
+                    <img src="../assets/images/meditations-images/meditation-pack-hearts.png"
+                        class="pack-single-hero-image" alt="ПАКЕТ ЛЮБОВЬ — три аудиопрограммы Сурии">
                 </figure>
             </div>
         </section>
@@ -92,25 +92,23 @@
                 <div class="pack-single-how-text">
                     <p class="how-text-step">
                         Первые 7 дней вы слушаете
-                        <a href="free-mind-and-body-in-pack.html" class="how-link">
-                            «Освободи голову и тело»
-                        </a> один раз в день.
+                        <a href="let-go-of-the-pain-from-the-past-in-pack.html" class="how-link">
+                            «Отпустить боль прошлого»
+                        </a>
                     </p>
                     <div class="how-separator"></div>
                     <p class="how-text-step">
                         Начиная с 7 дня добавляете
-                        <a href="energy-balance-in-pack.html" class="how-link">
-                            «Баланс энергий»
-                        </a> — можете слушать её утром, а первую
-                        днём или вечером.
+                        <a href="harmony-inside-me-in-pack.html" class="how-link">
+                            «Гармония внутри себя»
+                        </a>
                     </p>
                     <div class="how-separator"></div>
                     <p class="how-text-step">
                         С 14 дня подключаете
-                        <a href="family-protection-in-pack.html" class="how-link">
-                            «Родовую защиту»
-                        </a>, чтобы закрепить результат и
-                        поставить защиту.
+                        <a href="call-for-new-love-in-pack.html" class="how-link">
+                            «Призыв новой любви»
+                        </a>
                     </p>
                     <div class="how-separator"></div>
                     <p class="how-text-step">
@@ -126,17 +124,16 @@
             <div class="container">
                 <div class="pack-single-problem-content">
                     <h2 class="pack-single-problem-title">
-                        Перезагрузка:<br>чистка → баланс → защита
+                        Любовь:<br>три шага от боли к любви
                     </h2>
                     <p class="pack-single-problem-text extra-golden-line-after">
-                        Знаете это ощущение, когда вы вроде ничего особенного не делали, а сил нет? Когда после общения
-                        с некоторыми людьми хочется лечь и не вставать? Когда внутри тяжесть, раздражение, тревога, и
-                        непонятно откуда это вообще взялось? Это не ваше. Это то, что вы нахватали извне и носите на
-                        себе.
+                        Знаете, почему у многих не получается с отношениями? Они пытаются найти любовь, не разобравшись
+                        с тем, что внутри. Ходят на свидания с открытыми ранами от прошлого. Ищут мужчину, чтобы он
+                        заполнил пустоту. Надеются, что новые отношения исправят старую боль. Но так не работает.
                     </p>
                     <p class="pack-single-problem-text extra-golden-line-after">
-                        Одна медитация не решает проблему целиком. Нужен полный цикл. Этот пакет построен именно так:
-                        три медитации, три этапа, определённый порядок.
+                        Этот пакет построен так, чтобы провести вас от точки «больно и не верю» до точки «готова и
+                        открыта». Три медитации, три шага, определённый порядок.
                     </p>
                 </div>
             </div>
@@ -148,44 +145,57 @@
                 <div class="pack-single-steps-grid">
                     <div class="pack-single-step">
                         <div class="pack-single-step-number">01</div>
-                        <h3>Освободи голову и тело</h3>
-                        <h4> (чистка)</h4>
-                        <p class="pack-single-step-text">Сначала убираем всё, что налипло. Чужие эмоции, негатив, косые
-                            взгляды, зависть, тяжесть после общения с токсичными людьми. Всё, что не ваше, уходит. Как
-                            генеральная уборка внутри.</p>
-                        <a href="free-mind-and-body-in-pack.html" class="pack-single-step-link" target="_blank"
-                            rel="noopener" aria-label="Подробнее об освобождении головы и тела">
+                        <h3>Отпустить боль прошлого</h3>
+
+                        <p class="pack-single-step-text">
+                            Сначала убираем то, что тянет назад. Обиды, разочарования,
+                            предательства, всё, что застряло внутри и не даёт дышать. Пока это есть, вы несёте прошлое в
+                            каждые новые отношения.
+                        </p>
+                        <a href="let-go-of-the-pain-from-the-past-in-pack.html" class="pack-single-step-link"
+                            target="_blank" rel="noopener" aria-label="Подробнее об отпускании боли прошлого">
                             Подробнее →
                         </a>
                     </div>
                     <div class="pack-single-step">
                         <div class="pack-single-step-number">02</div>
-                        <h3>Баланс энергий</h3>
-                        <h4> (восстановление)</h4>
-                        <p class="pack-single-step-text">После чистки часто бывает пусто. Убрали чужое, а своего ещё
-                            нет. На этом этапе вы наполняетесь обратно. Возвращаете свою энергию, внутреннюю опору,
-                            ощущение «я в себе».</p>
-                        <a href="energy-balance-in-pack.html" class="pack-single-step-link" target="_blank"
-                            rel="noopener" aria-label="Подробнее о балансе энергий">
+                        <h3>Гармония внутри себя</h3>
+                        <p class="pack-single-step-text">
+                            Потом восстанавливаем вас. Уверенность, самоценность, внутреннюю опору. Чтобы вы шли в
+                            отношения не из нужды и пустоты, а из наполненности. Чтобы выбирали, а не цеплялись за
+                            любого, кто обратил внимание.
+                        </p>
+                        <a href="harmony-inside-me-in-pack.html" class="pack-single-step-link" target="_blank"
+                            rel="noopener" aria-label="Подробнее о гармонии внутри себя">
                             Подробнее →
                         </a>
                     </div>
                     <div class="pack-single-step">
                         <div class="pack-single-step-number">03</div>
-                        <h3>Родовая защита</h3>
-                        <h4> (защита)</h4>
-                        <p class="pack-single-step-text">И только потом ставите защиту. Чтобы чужое больше не пробивало.
-                            Чтобы вы могли общаться с людьми, ходить в толпу, сталкиваться с негативом, и оставаться в
-                            своей энергии.</p>
-                        <a href="family-protection-in-pack.html" class="pack-single-step-link"
-                            aria-label="Подробнее о родовой защите" target="_blank" rel="noopener">
+                        <h3>Призыв новой любви</h3>
+                        <p class="pack-single-step-text">
+                            И только потом открываете сердце для нового человека. Когда внутри чисто и вы в порядке,
+                            любовь приходит легко. Вы становитесь магнитом для того, кто вам подходит.
+                        </p>
+                        <a href="call-for-new-love-in-pack.html" class="pack-single-step-link"
+                            aria-label="Подробнее о призыве новой любви">
                             Подробнее →
                         </a>
                     </div>
                 </div>
             </div>
         </section>
-
+        <!-- Проблема -->
+        <section class="pack-single-problem">
+            <div class="container">
+                <div class="pack-single-problem-content">
+                    <p class="pack-single-problem-text extra-golden-line-after">
+                        Проходите по порядку. Не перескакивайте. Дайте себе время на каждый этап. Это не гонка, это путь
+                        к отношениям, которые вы заслуживаете.
+                    </p>
+                </div>
+            </div>
+        </section>
         <!-- Контакты -->
         <section id="contact">
             <div class="container contact-grid">
