Add pack freedom page

--- a/meditations/packs-freedom.html
+++ b/meditations/packs-freedom.html
@@ -184,7 +184,17 @@
                 </div>
             </div>
         </section>
-
+        <!-- Проблема -->
+        <section class="pack-single-problem">
+            <div class="container">
+                <div class="pack-single-problem-content">
+                    <p class="pack-single-problem-text extra-golden-line-after">
+                        Проходите по порядку. Не перескакивайте. Дайте себе время на каждый этап. Это не гонка, это путь
+                        к отношениям, которые вы заслуживаете.
+                    </p>
+                </div>
+            </div>
+        </section>
         <!-- Контакты -->
         <section id="contact">
             <div class="container contact-grid">
