Fix links to correct pack

--- a/meditations/harmony-inside-me-in-pack.html
+++ b/meditations/harmony-inside-me-in-pack.html
@@ -108,8 +108,8 @@
         <!-- Кнопка возврата к пакету -->
         <section class="med-pack-back">
             <div class="container med-pack-back">
-                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ПЕРЕЗАГРУЗКА">
-                    ← Вернуться к пакету <strong>ПЕРЕЗАГРУЗКА</strong>
+                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
+                    ← Вернуться к пакету <strong>ЛЮБОВЬ</strong>
                 </a>
             </div>
         </section>
@@ -230,8 +230,8 @@
         <!-- Кнопка возврата к пакету -->
         <section class="med-pack-back">
             <div class="container med-pack-back">
-                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ПЕРЕЗАГРУЗКА">
-                    ← Вернуться к пакету <strong>ПЕРЕЗАГРУЗКА</strong>
+                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
+                    ← Вернуться к пакету <strong>ЛЮБОВЬ</strong>
                 </a>
             </div>
         </section>
