--- a/meditations/let-go-of-the-pain-from-the-past-in-pack.html
+++ b/meditations/let-go-of-the-pain-from-the-past-in-pack.html
@@ -105,8 +105,8 @@
         <!-- Кнопка возврата к пакету -->
         <section class="med-pack-back">
             <div class="container med-pack-back">
-                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ПЕРЕЗАГРУЗКА">
-                    ← Вернуться к пакету <strong>ПЕРЕЗАГРУЗКА</strong>
+                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
+                    ← Вернуться к пакету <strong>ЛЮБОВЬ</strong>
                 </a>
             </div>
         </section>
@@ -226,8 +226,8 @@
         <!-- Кнопка возврата к пакету -->
         <section class="med-pack-back">
             <div class="container med-pack-back">
-                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ПЕРЕЗАГРУЗКА">
-                    ← Вернуться к пакету <strong>ПЕРЕЗАГРУЗКА</strong>
+                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
+                    ← Вернуться к пакету <strong>ЛЮБОВЬ</strong>
                 </a>
             </div>
         </section>
