Fix links to correct pack

--- a/meditations/harmony-inside-me-in-pack.html
+++ b/meditations/harmony-inside-me-in-pack.html
@@ -108,7 +108,7 @@
         <!-- Кнопка возврата к пакету -->
         <section class="med-pack-back">
             <div class="container med-pack-back">
-                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
+                <a href="packs-love.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
                     ← Вернуться к пакету <strong>ЛЮБОВЬ</strong>
                 </a>
             </div>
@@ -230,7 +230,7 @@
         <!-- Кнопка возврата к пакету -->
         <section class="med-pack-back">
             <div class="container med-pack-back">
-                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
+                <a href="packs-love.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
                     ← Вернуться к пакету <strong>ЛЮБОВЬ</strong>
                 </a>
             </div>
