--- a/meditations/call-for-new-love-in-pack.html
+++ b/meditations/call-for-new-love-in-pack.html
@@ -104,7 +104,7 @@
         <!-- Кнопка возврата к пакету -->
         <section class="med-pack-back">
             <div class="container med-pack-back">
-                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
+                <a href="packs-love.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
                     ← Вернуться к пакету <strong>ЛЮБОВЬ</strong>
                 </a>
             </div>
@@ -229,7 +229,7 @@
         <!-- Кнопка возврата к пакету -->
         <section class="med-pack-back">
             <div class="container med-pack-back">
-                <a href="packs-recharge.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
+                <a href="packs-love.html" class="pack-back-btn" aria-label="Вернуться к пакету ЛЮБОВЬ">
                     ← Вернуться к пакету <strong>ЛЮБОВЬ</strong>
                 </a>
             </div>
