--- a/meditations/call-for-new-love-in-pack.html
+++ b/meditations/call-for-new-love-in-pack.html
@@ -96,8 +96,9 @@
                     </a>
                 </div>
                 <figure class="med-single-hero-figure">
-                    <img src="../assets/images/meditations-images/harmony-inside-me-meditation-image-focus.png"
-                        class="med-single-hero-image" alt="Гармония внутри себя — аудиопрограмма Сурии">
+                    <img src="../assets/images/meditations-images/set-yourself-up-for-love-meditation-image-focus.png"
+                        alt="Аудиопрограмма Призыв новой любви — открыть сердце для отношений"
+                        class="med-single-hero-image">
                 </figure>
             </div>
         </section>
