--- a/meditations/packs-freedom.html
+++ b/meditations/packs-freedom.html
@@ -68,18 +68,18 @@
             <div class="container pack-single-hero-inner">
                 <div class="pack-single-hero-main">
                     <p class="pack-single-badge">ПАКЕТ АУДИОПРОГРАММ</p>
-                    <h1 class="pack-single-hero-title">ПЕРЕЗАГРУЗКА</h1>
+                    <h1 class="pack-single-hero-title">СВОБОДА</h1>
                     <p class="pack-single-hero-text">
-                        Три медитации, которые работают вместе: сначала убираете всё чужое и налипшее, потом
-                        восстанавливаете свою энергию, и затем ставите защиту, чтобы больше не цеплялось. Именно в таком
-                        порядке. Полный цикл: очистить, наполнить, защитить. После него вы как новая.
+                        Три медитации для тех, кого накрывает тревога и бесконечные мысли. Сначала успокаиваете голову,
+                        потом отпускаете контроль над тем, что не изменить, и затем находите опору внутри себя. После
+                        прохождения вы спокойны, устойчивы и больше не тратите силы на то, что не в ваших руках.
                     </p>
                     <p class="pack-single-price">7 000 ₽</p>
                     <a href="#contact" class="btn-primary pack-single-cta">Получить полный пакет</a>
                 </div>
                 <figure class="pack-single-hero-figure">
-                    <img src="../assets/images/meditations-images/meditation-pack-energy.png"
-                        class="pack-single-hero-image" alt="ПАКЕТ ПЕРЕЗАГРУЗКА — три аудиопрограммы Сурии">
+                    <img src="../assets/images/meditations-images/meditation-pack-stamina.png"
+                        class="pack-single-hero-image" alt="ПАКЕТ СВОБОДА — три аудиопрограммы Сурии">
                 </figure>
             </div>
         </section>
@@ -91,25 +91,26 @@
                 <div class="pack-single-how-text">
                     <p class="how-text-step">
                         Первые 7 дней вы слушаете
-                        <a href="free-mind-and-body-in-pack.html" class="how-link">
-                            «Освободи голову и тело»
-                        </a> один раз в день.
+                        <a href="letting-go-of-anxious-thoughts-in-pack.html" class="how-link"
+                            aria-label=" Подробнее об аудиопрограмме Отпустить тревожность и навязчивые мысли">
+                            «Отпустить тревожность и навязчивые мысли»
+                        </a>
                     </p>
                     <div class="how-separator"></div>
                     <p class="how-text-step">
                         Начиная с 7 дня добавляете
-                        <a href="energy-balance-in-pack.html" class="how-link">
-                            «Баланс энергий»
-                        </a> — можете слушать её утром, а первую
-                        днём или вечером.
+                        <a href="letting-go-of-control-in-pack.html" class="how-link"
+                            aria-label=" Подробнее об аудиопрограмме Отпускаю контроль">
+                            «Отпускаю контроль»
+                        </a>
                     </p>
                     <div class="how-separator"></div>
                     <p class="how-text-step">
                         С 14 дня подключаете
-                        <a href="family-protection-in-pack.html" class="how-link">
-                            «Родовую защиту»
-                        </a>, чтобы закрепить результат и
-                        поставить защиту.
+                        <a href="inner-support-meditation-in-pack.html" class="how-link"
+                            aria-label=" Подробнее об аудиопрограмме Опора внутри меня">
+                            «Опора внутри меня»
+                        </a>
                     </p>
                     <div class="how-separator"></div>
                     <p class="how-text-step">
@@ -118,24 +119,23 @@
                 </div>
             </div>
         </section>
-
-
         <!-- Проблема -->
         <section class="pack-single-problem">
             <div class="container">
                 <div class="pack-single-problem-content">
                     <h2 class="pack-single-problem-title">
-                        Перезагрузка:<br>чистка → баланс → защита
+                        Свобода:<br> от тревоги к устойчивости
                     </h2>
                     <p class="pack-single-problem-text extra-golden-line-after">
-                        Знаете это ощущение, когда вы вроде ничего особенного не делали, а сил нет? Когда после общения
-                        с некоторыми людьми хочется лечь и не вставать? Когда внутри тяжесть, раздражение, тревога, и
-                        непонятно откуда это вообще взялось? Это не ваше. Это то, что вы нахватали извне и носите на
-                        себе.
+                        Знаете это состояние, когда голова не выключается? Мысли крутятся по кругу, вы анализируете
+                        прошлое, тревожитесь о будущем, пытаетесь всё контролировать. Устали, измотаны, но остановиться
+                        не можете. А когда что-то идёт не по плану, вас сносит, потому что внутри нет опоры. Вы
+                        держитесь на внешнем: на людях, на обстоятельствах, на том, чтобы всё было «под контролем». И
+                        когда это рушится, рушитесь и вы.
                     </p>
                     <p class="pack-single-problem-text extra-golden-line-after">
-                        Одна медитация не решает проблему целиком. Нужен полный цикл. Этот пакет построен именно так:
-                        три медитации, три этапа, определённый порядок.
+                        Этот пакет построен так, чтобы провести вас от состояния «голова взрывается» к состоянию «я
+                        спокойна и устойчива». Три медитации, три шага, определённый порядок.
                     </p>
                 </div>
             </div>
@@ -147,37 +147,39 @@
                 <div class="pack-single-steps-grid">
                     <div class="pack-single-step">
                         <div class="pack-single-step-number">01</div>
-                        <h3>Освободи голову и тело</h3>
-                        <h4> (чистка)</h4>
-                        <p class="pack-single-step-text">Сначала убираем всё, что налипло. Чужие эмоции, негатив, косые
-                            взгляды, зависть, тяжесть после общения с токсичными людьми. Всё, что не ваше, уходит. Как
-                            генеральная уборка внутри.</p>
-                        <a href="free-mind-and-body-in-pack.html" class="pack-single-step-link" target="_blank"
-                            rel="noopener" aria-label="Подробнее об освобождении головы и тела">
+                        <h3>Отпустить тревожность и навязчивые мысли</h3>
+                        <p class="pack-single-step-text">
+                            Сначала успокаиваем голову. Останавливаем карусель мыслей, снимаем напряжение с тела. Вы
+                            получаете передышку и возможность выдохнуть.
+                        </p>
+                        <a href="letting-go-of-anxious-thoughts-in-pack.html" class="pack-single-step-link"
+                            aria-label="Подробнее об отпущении тревожности и навязчивых мыслей">
                             Подробнее →
                         </a>
                     </div>
-                    <div class="pack-single-step">
+                    <div class=" pack-single-step">
                         <div class="pack-single-step-number">02</div>
-                        <h3>Баланс энергий</h3>
-                        <h4> (восстановление)</h4>
-                        <p class="pack-single-step-text">После чистки часто бывает пусто. Убрали чужое, а своего ещё
-                            нет. На этом этапе вы наполняетесь обратно. Возвращаете свою энергию, внутреннюю опору,
-                            ощущение «я в себе».</p>
-                        <a href="energy-balance-in-pack.html" class="pack-single-step-link" target="_blank"
-                            rel="noopener" aria-label="Подробнее о балансе энергий">
+                        <h3>Отпускаю контроль</h3>
+                        <p class="pack-single-step-text">
+                            Потом отпускаем то, что держали мёртвой хваткой. Прошлое, которое не изменить. Будущее,
+                            которое не просчитать. Вы учитесь быть в настоящем и не тратить силы на то, что не в
+                            ваших
+                            руках.
+                        </p>
+                        <a href="letting-go-of-control-in-pack.html" class="pack-single-step-link"
+                            aria-label="Подробнее об отпущении контроля">
                             Подробнее →
                         </a>
                     </div>
                     <div class="pack-single-step">
                         <div class="pack-single-step-number">03</div>
-                        <h3>Родовая защита</h3>
-                        <h4> (защита)</h4>
-                        <p class="pack-single-step-text">И только потом ставите защиту. Чтобы чужое больше не пробивало.
-                            Чтобы вы могли общаться с людьми, ходить в толпу, сталкиваться с негативом, и оставаться в
-                            своей энергии.</p>
-                        <a href="family-protection-in-pack.html" class="pack-single-step-link"
-                            aria-label="Подробнее о родовой защите" target="_blank" rel="noopener">
+                        <h3>Опора внутри меня</h3>
+                        <p class="pack-single-step-text">
+                            И затем находим внутреннюю опору. Чтобы вы стояли на своих ногах, не зависели от внешнего и
+                            знали: что бы ни случилось, я справлюсь.
+                        </p>
+                        <a href="inner-support-meditation-in-pack.html" class="pack-single-step-link"
+                            aria-label="Подробнее о родовой защите">
                             Подробнее →
                         </a>
                     </div>
@@ -189,8 +191,8 @@
             <div class="container">
                 <div class="pack-single-problem-content">
                     <p class="pack-single-problem-text extra-golden-line-after">
-                        Проходите по порядку. Не перескакивайте. Дайте себе время на каждый этап. Это не гонка, это путь
-                        к отношениям, которые вы заслуживаете.
+                        Проходите по порядку: тревога → контроль → опора. Это путь от измотанности к спокойной силе
+                        внутри.
                     </p>
                 </div>
             </div>
